# GameTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_web.sh
src/: CMakeLists.txt  Game.cpp  Game.hpp  Main.cpp  Physics.cpp  Physics.hpp  Rendering.cpp  Rendering.hpp
